Fix footer overflow

--- a/app.sass
+++ b/app.sass
@@ -42,7 +42,8 @@ footer
   width: 100%
   background-color: #EEE
   float: left
-  padding: 10px
+  iframe
+    margin: 10px
 
 #ingredients
   left: 100px
